Added getEmployee() and displayEmployee() changed main() to use them

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3'
 services:
-  # Application Dockerfile is in same folder which is .
+
+  # Build app from Dockerfile in same folder
   app:
     build: .
 
-  # db is is db folder
+  # Build the db as name world from the Dockerfile in the db folder
+  # exposing the port if we want to run code outside a container
   db:
     build: db/.
-    restart: always
     ports:
       - "33060:3306"
